--- a/data/common.css
+++ b/data/common.css
@@ -7,6 +7,7 @@
     position:fixed;
     width: 100%;
     border:solid 2px black;
+    background: aliceblue;
 }
 
 .nav img{
@@ -27,6 +28,11 @@
     margin-right: 50px;
 }
 
-#waterCanvas{
-    width: 100%;
+.bigText{
+    font-size: 5em;
 }
+
+.textAlign{
+    text-align: center;
+}
+
