--- a/data/main.css
+++ b/data/main.css
@@ -1,5 +1,3 @@
-
-
 .content{
     background: rgb(116,116,164);
     background: linear-gradient(0deg, rgba(116,116,164,1) 0%, rgba(24,188,222,1) 97%);
@@ -7,7 +5,10 @@
 
 .container{
     padding-top:55px;
-    margin:0 5em 0 5em;
+}
+
+.title{
+    margin: 3em 0;
 }
 
 .section-caracteristique{
@@ -20,15 +21,54 @@
     align-content: center;
     justify-content: center;
     padding: 0 50px;
-
 }
 
 .flexRowReverse{
     flex-direction: row-reverse;
 }
 
-.section-caracteristique img{
+.section-caracteristique img {
     width: 500px;
     height: 300px;
+    margin:80px
+}
 
+.section-caracteristique img:not(.reverse){
+    border-radius: 30px;
+    box-shadow: -53px 53px 0 -6px rgba(69,101,179,0.65);
+}
+
+.section-caracteristique img.reverse {
+    border-radius: 30px;
+    box-shadow: 53px 53px 0 -6px rgba(69,101,179,0.65);
+}
+
+
+/* Ajout de transition pour les éléments du carrousel */
+.carousel-item {
+    transition: transform 0.5s ease-in-out;
+}
+
+/* Créer une animation plus fluide lorsque le slide change */
+.carousel-item-next, .carousel-item-prev, .carousel-item.active {
+    transition: transform 0.5s  ease-in-out; /* Durée de l'animation du slide */
+}
+
+.carousel-inner {
+    position: relative;
+    overflow: hidden;
+}
+
+/* Ajouter un effet de translation horizontale */
+.carousel-item-next,
+.carousel-item-prev {
+    transform: translateX(100%);
+}
+
+.carousel-item-prev {
+    transform: translateX(-100%);
+}
+
+.carousel-item.active {
+    transform: translateX(0);
 }
